--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h3>If you love coding like me.</h3>
             <p>Are you a programmer like me, or you just trasitioned into tech?</p>
             <p>We can code together!</p>
-            <a class="btn" href="pelumifola@gmail.com">CONTACT ME</a>
+            <a class="btn" href="mailto:pelumifola@gmail.com">CONTACT ME</a>
         </div>
     </div>
     <div class="bottom">
